--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "thesistemplate",
+  "name": "ndsassignment2report",
   "version": "1.0.0",
-  "description": "Pandoc Thesis Template",
+  "description": "Report for cloud testing",
   "main": "index.js",
   "scripts": {
     "pdfmac": 
-    "pandoc --latex-engine=xelatex -H _config/preamble.tex -V fontsize=10pt -V documentclass:book -V papersize:a4paper -V classoption:openright --number-sections --bibliography=03_references/references.bib 00_front-material/*.md _config/toc.md 01_sections/*/*.md 02_appendices/*.md 03_references/references.md -o output.pdf",
+    "pandoc --latex-engine=xelatex -H _config/preamble.tex -V fontsize=10pt -V documentclass:book -V papersize:a4paper -V classoption:oneside --number-sections 00_front_material/*.md _config/toc.md 01_sections/*/*.md 02_appendices/*.md 03_references/references.md -o B00029598_B00082716_B00079288_Homan_Kelly_Ward_NDS_Assignment2_Report.pdf",
     "cleanmac":
-    "rm output.pdf",
+    "rm B00029598_B00082716_B00079288_Homan_Kelly_Ward_NDS_Assignment2_Report.pdf",
     "pdfwin":
     "javac Build.java && java Build",
     "cleanwin":
-    "DEL *.class *.pdf"
+    "DEL *.class B00029598_B00082716_B00079288_Homan_Kelly_Ward_NDS_Assignment2_Report.pdf"
   },
   "repository": {
     "type": "git",
